# lp_check

./: .gitignore  CMakeLists.txt  README.md
include/: HighsSolver.hpp  LpSolveSolver.hpp  ScipSolver.hpp  SolverInterface.hpp
src/: HighsSolver.cpp  LpSolveSolver.cpp  ScipSolver.cpp  main.cpp
tests/: 2122.lp
tests/lp_files/: 1451.lp  example-1.lp  fixed-binary.lp  lps_check.lp  trash.lp
